# RGB-D-Visual-Servo-Algo-HPC-

./: CMakeLists.txt  README.md  requirements.txt  run_berkeley_analysis.bat
data/004_sugar_box_berkeley_rgbd/004_sugar_box/: NP1_0.h5  NP1_102.h5  NP1_105.h5  NP1_108.h5  NP1_111.h5  NP1_114.h5  NP1_117.h5  NP1_12.h5  NP1_120.h5  NP1_123.h5  NP1_126.h5  NP1_129.h5  NP1_132.h5  NP1_135.h5  NP1_138.h5  NP1_141.h5  NP1_144.h5  NP1_147.h5  NP1_15.h5  NP1_150.h5  NP1_153.h5  NP1_156.h5  NP1_159.h5  NP1_162.h5  NP1_165.h5  NP1_168.h5  NP1_171.h5  NP1_174.h5  NP1_177.h5  NP1_18.h5  NP1_180.h5  NP1_183.h5  NP1_186.h5  NP1_189.h5  NP1_192.h5  NP1_195.h5  NP1_198.h5  NP1_201.h5  NP1_204.h5  NP1_207.h5  (+561 more)
data/004_sugar_box_berkeley_rgbd/004_sugar_box/masks/: NP1_0_mask.pbm  NP1_102_mask.pbm  NP1_105_mask.pbm  NP1_108_mask.pbm  NP1_111_mask.pbm  NP1_114_mask.pbm  NP1_117_mask.pbm  NP1_120_mask.pbm  NP1_123_mask.pbm  NP1_126_mask.pbm  NP1_129_mask.pbm  NP1_12_mask.pbm  NP1_132_mask.pbm  NP1_135_mask.pbm  NP1_138_mask.pbm  NP1_141_mask.pbm  NP1_144_mask.pbm  NP1_147_mask.pbm  NP1_150_mask.pbm  NP1_153_mask.pbm  NP1_156_mask.pbm  NP1_159_mask.pbm  NP1_15_mask.pbm  NP1_162_mask.pbm  NP1_165_mask.pbm  NP1_168_mask.pbm  NP1_171_mask.pbm  NP1_174_mask.pbm  NP1_177_mask.pbm  NP1_180_mask.pbm  NP1_183_mask.pbm  NP1_186_mask.pbm  NP1_189_mask.pbm  NP1_18_mask.pbm  NP1_192_mask.pbm  NP1_195_mask.pbm  NP1_198_mask.pbm  NP1_201_mask.pbm  NP1_204_mask.pbm  NP1_207_mask.pbm  (+560 more)
data/004_sugar_box_berkeley_rgbd/004_sugar_box/poses/: NP5_0_pose.h5  NP5_102_pose.h5  NP5_105_pose.h5  NP5_108_pose.h5  NP5_111_pose.h5  NP5_114_pose.h5  NP5_117_pose.h5  NP5_120_pose.h5  NP5_123_pose.h5  NP5_126_pose.h5  NP5_129_pose.h5  NP5_12_pose.h5  NP5_132_pose.h5  NP5_135_pose.h5  NP5_138_pose.h5  NP5_141_pose.h5  NP5_144_pose.h5  NP5_147_pose.h5  NP5_150_pose.h5  NP5_153_pose.h5  NP5_156_pose.h5  NP5_159_pose.h5  NP5_15_pose.h5  NP5_162_pose.h5  NP5_165_pose.h5  NP5_168_pose.h5  NP5_171_pose.h5  NP5_174_pose.h5  NP5_177_pose.h5  NP5_180_pose.h5  NP5_183_pose.h5  NP5_186_pose.h5  NP5_189_pose.h5  NP5_18_pose.h5  NP5_192_pose.h5  NP5_195_pose.h5  NP5_198_pose.h5  NP5_201_pose.h5  NP5_204_pose.h5  NP5_207_pose.h5  (+81 more)
data/berkeley_diverse/: dataset_summary.json
include/: DataLoader.h  ImageProcessor.h  Logger.h  MHD.h  PerformanceMetrics.h  PoseEstimator.h  SimulatedAnnealing.h
output/berkeley_frames/NP1_0/: generate_plots.py
output/berkeley_frames/NP1_0/data/: benchmark_results.json  convergence_1threads_run2.csv  final_pose.json  histogram_data.csv  performance_metrics.csv  performance_metrics.json
output/berkeley_frames/NP1_180/: generate_plots.py
output/berkeley_frames/NP1_180/data/: benchmark_results.json  convergence_2threads_run4.csv  final_pose.json  histogram_data.csv  performance_metrics.csv  performance_metrics.json
output/berkeley_frames/NP1_270/: generate_plots.py
output/berkeley_frames/NP1_270/data/: benchmark_results.json  convergence_log.csv  (+4 more)
output/berkeley_frames/NP1_90/: generate_plots.py
output/berkeley_frames/NP2_0/: generate_plots.py
scripts/: convert_berkeley_data.py  generate_per_frame_analysis.py
src/: DataLoader.cpp  ImageProcessor.cpp  Logger.cpp  MHD.cpp  PerformanceMetrics.cpp  PoseEstimator.cpp  SimulatedAnnealing.cpp  main.cpp
(+17 files in other folders)
